--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
 
-    <link rel="shortcut icon" href="./src/assets/logo-to-do.svg" />
+    <link rel="shortcut icon" href="./src/assets/rocket.svg" />
     <title>To do</title>
   </head>
   <body>
